--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2660dd80",
+   "id": "66cbace6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -823,7 +823,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "6c69aead",
+   "id": "6e83c336",
    "metadata": {},
    "outputs": [
     {
@@ -1053,7 +1053,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53b104f4",
+   "id": "7ced4a63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1448,7 +1448,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7b88f42",
+   "id": "306f3205",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1457,8 +1457,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "9e37092d",
+   "execution_count": 56,
+   "id": "4bc1e9af",
    "metadata": {},
    "outputs": [
     {
@@ -1482,75 +1482,106 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>JAPAN</th>\n",
-       "      <th>KOREA</th>\n",
-       "      <th>SINGAPORE</th>\n",
+       "      <th>Age_dependency_JAPAN</th>\n",
+       "      <th>Consumer_price_JAPAN</th>\n",
+       "      <th>Age_dependency_KOREA</th>\n",
+       "      <th>Consumer_price_KOREA</th>\n",
+       "      <th>Age_dependency_SINGAPORE</th>\n",
+       "      <th>Consumer_price_SINGAPORE</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2012</th>\n",
        "      <td>59.0152801637455</td>\n",
+       "      <td>99.680566347233</td>\n",
        "      <td>36.3589055204387</td>\n",
+       "      <td>106.301121621065</td>\n",
        "      <td>36.0043849622012</td>\n",
+       "      <td>110.064012324365</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2013</th>\n",
        "      <td>60.7133638032773</td>\n",
+       "      <td>100.0259000259</td>\n",
        "      <td>36.3228990728866</td>\n",
+       "      <td>107.684500029745</td>\n",
        "      <td>36.3473387177015</td>\n",
+       "      <td>112.659983380321</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2014</th>\n",
        "      <td>62.3833231883095</td>\n",
+       "      <td>102.788569455236</td>\n",
        "      <td>36.4410282679253</td>\n",
+       "      <td>109.057170183459</td>\n",
        "      <td>36.7979217671482</td>\n",
+       "      <td>113.814728526275</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2015</th>\n",
        "      <td>63.9521257887958</td>\n",
+       "      <td>103.600103600104</td>\n",
        "      <td>36.7429178205437</td>\n",
+       "      <td>109.827340829112</td>\n",
        "      <td>37.3419885620364</td>\n",
+       "      <td>113.21975920438</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2016</th>\n",
        "      <td>65.290106306176</td>\n",
+       "      <td>103.47923681257</td>\n",
        "      <td>37.1496082598761</td>\n",
+       "      <td>110.894505383873</td>\n",
        "      <td>37.9844314563033</td>\n",
+       "      <td>112.617106126894</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 JAPAN             KOREA         SINGAPORE\n",
-       "2012  59.0152801637455  36.3589055204387  36.0043849622012\n",
-       "2013  60.7133638032773  36.3228990728866  36.3473387177015\n",
-       "2014  62.3833231883095  36.4410282679253  36.7979217671482\n",
-       "2015  63.9521257887958  36.7429178205437  37.3419885620364\n",
-       "2016   65.290106306176  37.1496082598761  37.9844314563033"
+       "     Age_dependency_JAPAN Consumer_price_JAPAN Age_dependency_KOREA  \\\n",
+       "2012     59.0152801637455      99.680566347233     36.3589055204387   \n",
+       "2013     60.7133638032773       100.0259000259     36.3228990728866   \n",
+       "2014     62.3833231883095     102.788569455236     36.4410282679253   \n",
+       "2015     63.9521257887958     103.600103600104     36.7429178205437   \n",
+       "2016      65.290106306176      103.47923681257     37.1496082598761   \n",
+       "\n",
+       "     Consumer_price_KOREA Age_dependency_SINGAPORE Consumer_price_SINGAPORE  \n",
+       "2012     106.301121621065         36.0043849622012         110.064012324365  \n",
+       "2013     107.684500029745         36.3473387177015         112.659983380321  \n",
+       "2014     109.057170183459         36.7979217671482         113.814728526275  \n",
+       "2015     109.827340829112         37.3419885620364          113.21975920438  \n",
+       "2016     110.894505383873         37.9844314563033         112.617106126894  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#扶養比/消費指數\n",
-    "Country = ['JAPAN', 'KOREA', 'SINGAPORE']\n",
+    "Country = ['Age_dependency_JAPAN', 'Consumer_price_JAPAN','Age_dependency_KOREA', 'Consumer_price_KOREA','Age_dependency_SINGAPORE','Consumer_price_SINGAPORE']\n",
     "years = np.linspace(2011, 2015, 5)\n",
     "#日本\n",
-    "Pd_country1 = Age_dependency_ratio.loc[1]\n",
+    "Pd_country1 = data2.loc[1]\n",
+    "Pd_country2 = data2.loc[2]\n",
     "#韓國\n",
-    "Pd_country2 = Age_dependency_ratio.loc[4]\n",
+    "Pd_country3 = data2.loc[4]\n",
+    "Pd_country4 = data2.loc[5]\n",
     "#新加坡\n",
-    "Pd_country3 = Age_dependency_ratio.loc[7]\n",
+    "Pd_country5 = data2.loc[7]\n",
+    "Pd_country6 = data2.loc[8]\n",
     "\n",
     "alldata = {\n",
-    "    \"JAPAN\": Pd_country1,\n",
-    "    \"KOREA\" : Pd_country2,\n",
-    "    \"SINGAPORE\": Pd_country3,\n",
+    "    \"Age_dependency_JAPAN\": Pd_country1,\n",
+    "    \"Consumer_price_JAPAN\": Pd_country2,\n",
+    "    \"Age_dependency_KOREA\" : Pd_country3,\n",
+    "    \"Consumer_price_KOREA\" : Pd_country4,\n",
+    "    \"Age_dependency_SINGAPORE\": Pd_country5,\n",
+    "    \"Consumer_price_SINGAPORE\": Pd_country6,\n",
     "}\n",
     "\n",
     "df3 = pd.DataFrame(alldata)\n",
@@ -1561,7 +1592,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "588fb211",
+   "id": "01d90b24",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1677,7 +1708,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "883e1c00",
+   "id": "afe5dd51",
    "metadata": {},
    "outputs": [
     {
@@ -1787,7 +1818,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "036ea013",
+   "id": "143fb98c",
    "metadata": {},
    "outputs": [
     {
@@ -1890,7 +1921,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "a04be729",
+   "id": "eeed551f",
    "metadata": {},
    "outputs": [
     {
@@ -1910,7 +1941,7 @@
     "value1 = df6.loc['2011', 'population']\n",
     "value2 = df6.loc['2011', 'employment']\n",
     "# 繪製圓餅圖\n",
-    "#2011\n",
+    "#2011為例\n",
     "plt.pie([value1, value2], labels=['population', 'employment'], autopct='%1.1f%%')\n",
     "\n",
     "# 顯示圖表\n",
